# Context-Aware-Recommender-System

./: .gitignore  README.md  SCHEMA_CONTRACT.md  TODO.md  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: context_attn.yaml  context_early.yaml  context_late.yaml  ncf.yaml
configs/ablation/: context_only.yaml  no_device.yaml  no_session.yaml  no_temporal.yaml
data/features/: .gitignore
data/processed/: .gitignore
data/raw/: movielens.dvc
notebooks/: 01_eda_movielens.ipynb
src/ablation/: ablation_dataset.py  ablation_runner.py
src/api/: app.py  feature_builder.py  model_export.py  schemas.py
src/data/: datamodule.py  dataset.py  download.py  movielens.py
src/data/features/: context.py  device.py  negative_sampling.py  pipeline.py  session.py  temporal.py
src/evaluation/: evaluator.py  metrics.py
src/interpretability/: attention_viz.py  shap_analysis.py
src/models/: __init__.py  context_ncf_attn.py  context_ncf_early.py  context_ncf_late.py  ncf.py
src/models/modules/: __init__.py  gate.py  gmf.py  mlp.py
src/training/: logger.py  train.py
tests/: conftest.py  test_api.py  test_context_models.py  test_dataset.py  test_features.py  test_metrics.py  test_ncf.py
